--- a/PokeDict/Base.lproj/Main.storyboard
+++ b/PokeDict/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                     <constraint firstItem="3Hu-i5-x48" firstAttribute="centerX" secondItem="fmc-v7-Ac4" secondAttribute="centerX" id="vrV-KX-tLy"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="FhI-ac-eb9">
+                            <searchBar contentMode="redraw" placeholder="Search Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="FhI-ac-eb9">
                                 <rect key="frame" x="0.0" y="45" width="375" height="44"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
